<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Work  
    <string name="maps_api_key">0Wp1747MVgsklImDthpkPZQmQXF-igwvxB_kePg</string>
-->
<!-- Home     
	<string name="maps_api_key">0Wp1747MVgsmw4PIyxzmIVN_8fL3Y1Fu3AgESjg</string>
-->
<!-- Laptop -->   
	<string name="maps_api_key">0uU3CgeK14j7-Y1uuKGDdFZ7MveW4BEX72coW1Q</string>
   	
    <string name="app_name">Mountain Unicyclist</string>
    <string name="all_locations">All Locations</string>
    <string name="my_locations">My Locations</string>
    <string name="description">Description</string>
    <string name="directions">Directions</string>
    <string name="trails">Trails</string>
    <string name="challenges">Challenges</string>
    <string name="comments">Comments</string>
    <string name="mapview">map view</string>
    <string name="new_location">New Location</string>
    <string name="New">New</string>
    <string name="add_image">Add a new image</string>
    <string name="delete_location">Delete this Location</string>
    <string name="add_to_favourites">Add to \"Favourites\"</string>
    <string name="remove_from_favourites">Remove from \"Favourites\"</string>
    <string name="settings">Settings</string>
    <string name="distances_in_miles">Measure distances in Miles?</string>
    <string name="locations">locations</string>
    <string name="distance_filter">Distance Filter</string>
    <string name="distance_filter_summary">Show only locations this distance from your current location.</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="favourites">favourites</string>
    <string name="location_name">Location name</string>
    <string name="location_picker">Location Picker</string>
    <string name="is_this_location_correct">Is this location correct?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rating">Rating</string>
    <string name="tags_by_name">Tags by name</string>
    <string name="tags_by_usage">Tags by usage</string>
    <string name="click_to_add_tags"> - Click here to add tags - </string>
    <string name="preferences">Preferences</string>
    <string name="tag_picker">Tag Picker</string>
    <string name="tag_name">tag name</string>
    <string name="ride">Ride</string>
    <string name="trail_name">Trail Name</string>
    <string name="feature">feature</string><string name="features">Features</string>
    <string name="new_trail">New Trail</string>
    <string name="create">Create</string>
    <string name="mark_trail_head">Mark Trail Head&#8230;</string>
    <string name="update">Update</string>
    <string name="add_new_trail">Add a New Trail</string>
    <string name="add_new_location">Add a New Location</string>
    <string name="submit">Submit</string>
    <string name="add_comment">Add a new comment</string>
    <string name="skills">Skills</string>
    <string name="goals">Goals</string>
    <string name="accomplishments">Conquests</string>
    <string name="tracks">GPS Tracks</string>
    <string name="username">User name</string>
    <string name="view">View</string>
    <string name="close">Close</string>
    <string name="save_location">Save location</string>
    <string name="get_photo">Get Photo from...</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete_image">Delete Image</string>
    <string name="set_as_cover_image">Select as Cover Image</string>
    <string name="schedule_a_ride">Schedule a Ride</string>
    <string name="my_rides">My Rides</string>
    <string name="add_new_skill">Add a new Skill</string>
    <string name="define_new_skill">Define a new skill</string>
    <string name="skill_name">Skill name</string>
    <string name="difficulty">Difficulty</string>
    <string name="save">Save</string>
    <string name="new_skill">New Skill</string>
    
</resources>