<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newlocationflipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    	<ImageView
    	    android:id="@+id/image"
    	    android:layout_width="wrap_content"
    	    android:layout_height="85dip"
    	    android:clickable="true"
    	    android:src="@drawable/ic_photo" />
    
		<EditText
		    android:id="@+id/name"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textCapWords"
		    android:hint="@string/location_name" >
	
		</EditText>
	
		<EditText
		    android:id="@+id/description"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top"
		    android:hint="@string/description"
		    android:inputType="textMultiLine|textCapSentences"
		    android:lines="6"
		    android:singleLine="false" />
	
	   	<EditText
	   	    android:id="@+id/directions"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    android:gravity="top"
	   	    android:hint="@string/directions"
	   	    android:inputType="textMultiLine|textCapSentences"
       	    android:lines="6"
	   	    android:singleLine="false" />
	
	   	<RelativeLayout
	   	    android:id="@+id/relativeLayout1"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content" >
	
	   		<Button
	   		    android:id="@+id/addButton"
	   		    android:layout_width="100dp"
	   		    android:layout_height="50dp"
	   		    android:layout_alignParentRight="true"
	   		    android:layout_alignParentBottom="true"
	   		    android:background="@drawable/black_button"
	   		    android:textColor="#FFFFFF"
	   		    android:text="@string/add" />
	
	   		<Button
	   		    android:id="@+id/cancelButton"
	   		    android:layout_width="100dp"
	   		    android:layout_height="50dp"
	   		    android:layout_alignParentLeft="true"
	   		    android:layout_alignParentBottom="true"
	   		    android:background="@drawable/black_button"
	   		    android:text="@android:string/cancel"
	   		    android:textColor="#FFFFFF" />
	
	   	</RelativeLayout>
</LinearLayout>
	   	
