<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">

	    <Gallery
	        android:id="@+id/gallery1"
	        android:layout_width="fill_parent"
	        android:layout_height="80dip" />
	
	    <ImageView
	        android:id="@+id/addImageButton"
	        android:layout_width="wrap_content"
	        android:layout_height="80dp"
	        android:layout_gravity="center|right"
	        android:contentDescription="@string/add_image"
	        android:src="@drawable/ic_photo" />
	    
    </LinearLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="top" >
        
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        android:src="@drawable/background" />
    
    <Gallery
        android:id="@+id/descriptionMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" />
        
    <ViewFlipper
	        android:id="@+id/flipper"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/descriptionMenu" >
	
	        <TextView
	            android:id="@+id/description"
	            android:layout_width="fill_parent"
	            android:layout_height="100dip"
	            android:padding="5dp"
	            android:textColor="#33b5e5" />
		
		    <TextView
		        android:id="@+id/directions"
		        android:layout_width="fill_parent"
		        android:layout_height="100dip"
		        android:padding="5dp"
		        android:textColor="#ffbb33"
		        android:visibility="gone" />
	
	    </ViewFlipper>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    	
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitStart"
            android:src="@drawable/background" />

        <View android:id="@+id/strut1"
	        android:layout_width="0dp"
	        android:layout_height="0dp" 
	        android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/trailsButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/strut1"
            android:background="@drawable/black_button"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:text="@string/trails" />

        <Button
            android:id="@+id/challengesButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_alignLeft="@id/strut1"
            android:layout_alignParentRight="true"
            android:background="@drawable/black_button"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:text="@string/challenges" />

    </RelativeLayout>

     <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_gravity="top" >
        
        <ImageView
            android:id="@+id/commentsBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />
        
        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
	        android:padding="7dp"
            android:text="@string/comments" />
	
	    <ScrollView
	        android:id="@+id/scrollView1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_below="@+id/textView7"
	        android:layout_above="@+id/tagarea" >
	
	        <LinearLayout
	            android:id="@+id/linearLayout2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/comments"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:padding="10dp"
	                 />
	
	        </LinearLayout>
	    </ScrollView>
	    

	    <HorizontalScrollView
	        android:id="@+id/tagarea"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_gravity="bottom" >
	
	        <LinearLayout
	            android:id="@+id/linearLayout1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/tags"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:clickable="true"
	                android:padding="5dp"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="#99CC00" />
	            
	<!-- 		    <ImageButton -->
	<!-- 		        android:id="@+id/addTagButton" -->
	<!-- 		        android:layout_width="wrap_content" -->
	<!-- 		        android:layout_height="wrap_content" -->
	<!-- 		        android:layout_gravity="center|right" -->
	<!-- 		        android:contentDescription="@string/add_image" -->
	<!-- 		        android:src="@drawable/plus" /> -->
	
	        </LinearLayout>
	            
	    </HorizontalScrollView>
    </RelativeLayout>

</LinearLayout>